[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Enemy_slinger.gd" type="Script" id=1]
[ext_resource path="res://Sprites/RangeYerli/yerli3Attack.png" type="Texture" id=2]
[ext_resource path="res://Sprites/RangeYerli/yerli3Walk.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.64527, 5.19715 )

[sub_resource type="CircleShape2D" id=2]
radius = 14.1285

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.19227
height = 0.437167

[sub_resource type="CircleShape2D" id=4]
radius = 46.454

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 16, 17 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Walk",
"speed": 12.0
} ]

[node name="Enemy_Slinger" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 1088
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.9653, -0.133434 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="DefendingArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefendingArea"]
position = Vector2( 2.99641, 0.239047 )
shape = SubResource( 3 )

[node name="AttackingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingArea"]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 19 )
animation = "Attack"
frame = 1
playing = true

[node name="aimCast" type="RayCast2D" parent="."]
position = Vector2( -1.02904, 0.266363 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 256
collide_with_areas = true

[node name="attack_speed" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="area_entered" from="AttackingArea" to="." method="_on_AttackingArea_area_entered"]
[connection signal="area_exited" from="AttackingArea" to="." method="_on_AttackingArea_area_exited" flags=3]
[connection signal="timeout" from="attack_speed" to="." method="_on_attack_speed_timeout" flags=3]
